samar tan bcs07

--- a/index.html
+++ b/index.html
@@ -300,9 +300,8 @@
 
                     <div class="features_box">
                         <!-- box 1 -->
-                        <div class="box_item wow animate__ animate__fadeInRight animated" data-wow-duration="2s"
-                            data-wow-delay="0.4s"
-                            style="visibility: visible; animation-duration: 2s; animation-delay: 0.4s; animation-name: fadeInRight;">
+                        <div class="box_item wow animate__animated animate__fadeInRight" data-wow-duration="2s"
+                        data-wow-delay="0.4s">
                             <div class="item_bg">
                                 <i class="flaticon-idea"></i>
                                 <div class="item_bg_title">
@@ -315,9 +314,8 @@
                         </div>
 
                         <!-- box 2 -->
-                        <div class="box_item wow animate__ animate__fadeInRight animated" data-wow-duration="2s"
-                            data-wow-delay="0.6s"
-                            style="visibility: visible; animation-duration: 2s; animation-delay: 0.6s; animation-name: fadeInRight;">
+                        <div class="box_item wow animate__animated animate__fadeInRight" data-wow-duration="2s"
+                        data-wow-delay="0.6s">
                             <div class="item_bg">
                                 <i class="flaticon-coding"></i>
                                 <div class="item_bg_title">
@@ -330,9 +328,8 @@
                         </div>
 
                         <!-- box 3 -->
-                        <div class="box_item wow animate__ animate__fadeInRight animated" data-wow-duration="2s"
-                            data-wow-delay="0.8s"
-                            style="visibility: visible; animation-duration: 2s; animation-delay: 0.8s; animation-name: fadeInRight;">
+                        <div class="box_item wow animate__animated animate__fadeInRight" data-wow-duration="2s"
+                        data-wow-delay="0.8s">
                             <div class="item_bg">
                                 <i class="flaticon-rocket"></i>
                                 <div class="item_bg_title">
