--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./img/pic3_1.jpg" type="image/x-icon" style="color: blueviolet" />
-    <title>Samar - HTML Template</title>
+
+    <title>Samar-HTML Template</title>
 
 
     <!-- link google font  -->
@@ -118,9 +119,9 @@
     </header>
 
     <!-- đây là carousel  -->
-    <section class="carousel">
+    <section class="saCarousel">
         <div class="container">
-            <div class="carousel_content">
+            <div class="saCarousel_content">
                 <div class="content_left">
                     <div class="title">
                         <p class="wow animate__animated animate__fadeInUp ">We are The Best</p>
