--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./img/pic3_1.jpg" type="image/x-icon" style="color: blueviolet" />
 
-    <title>Samar-HTML Template</title>
+    <title>BCS07 Tân Samar</title>
 
 
     <!-- link google font  -->
@@ -46,13 +46,6 @@
     <!-- file css  -->
     <link rel="stylesheet" href="./CSS/style.css">
 
-    <!-- Required meta tags -->
-    <!-- <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
-
-    <!-- Bootstrap CSS v5.2.1
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous"> -->
 
 </head>
 
@@ -931,7 +924,7 @@
         </div>
     </footer>
 
-    <!-- ĐÂY LÀ BACK TO TOP  -->
+    <!-- ĐÂY LÀ NÚT BACK TO TOP  -->
     <div class="back_to_top cd-top text-replace js-cd-top">
         <i class="fa fa-arrow-up"></i>
     </div>
